--- a/plugin.xml
+++ b/plugin.xml
@@ -75,6 +75,20 @@
     
 
     <config-file target="AndroidManifest.xml" parent="/manifest/application">
+
+        <activity android:name="ly.count.android.api.messaging.ProxyActivity" android:label="@string/app_name" android:theme="@android:style/Theme.Translucent" android:noHistory="true"/>
+        <receiver
+            android:name="ly.count.android.api.messaging.CountlyMessaging"
+            android:permission="com.google.android.c2dm.permission.SEND" >
+            <intent-filter>
+                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+                <category android:name="ly.count.android.api" />
+            </intent-filter>
+        </receiver>
+        <service android:name="ly.count.android.api.messaging.CountlyMessagingService" >
+            <meta-data android:name="broadcast_action" android:value="ly.count.android.api.broadcast" />
+        </service>
+
         <service android:name="org.OpenUDID.OpenUDID_service">
             <intent-filter>
                 <action android:name="org.OpenUDID.GETUDID" />
