--- a/plugin.xml
+++ b/plugin.xml
@@ -44,11 +44,11 @@
     <source-file src="src/ios/sdk/CountlyDB.m" compiler-flags="-fno-objc-arc" />
     <header-file src="src/ios/sdk/Countly_OpenUDID.h"/>
     <source-file src="src/ios/sdk/Countly_OpenUDID.m" compiler-flags="-fno-objc-arc" />
-    <!-- <source-file src="src/ios/sdk/Countly.xcdatamodeld"/> -->
-    <!-- <source-file src="src/ios/sdk/Countly.m"/> -->
-
+    
     <header-file src="src/ios/CountlyCordova.h"/>
     <source-file src="src/ios/CountlyCordova.m"/>
+
+    <framework src="src/ios/sdk/Countly.xcdatamodeld"/>
 
     <framework src="CoreTelephony.framework" weak="true" />
     <framework src="CoreData.framework" weak="true" />
@@ -68,9 +68,6 @@
         <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE"/>
         <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
         <uses-permission android:name="android.permission.WAKE_LOCK"/>
-        
-        
-<uses-permission android:name="ly.count.android.example.messaging.permission.C2D_MESSAGE" />
     </config-file>
     
 
