--- a/plugin.xml
+++ b/plugin.xml
@@ -80,6 +80,18 @@
                 <action android:name="org.openudid.GETUDID" />
             </intent-filter>
         </service>
+        <receiver
+            android:name="ly.count.android.sdk.messaging.CountlyMessaging"
+            android:permission="com.google.android.c2dm.permission.SEND" >
+            <intent-filter>
+                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+                <category android:name="ly.count.android.api" />
+            </intent-filter>
+        </receiver>
+        <service android:name="ly.count.android.sdk.messaging.CountlyMessagingService" >
+            <meta-data android:name="broadcast_action" android:value="ly.count.android.api.broadcast" />
+        </service>
+
     </config-file>
 
     <source-file src="src/android/CountlyCordova.java" target-dir="src/ly/count/android/sdk"/>
@@ -100,10 +112,18 @@
     <source-file src="src/android/ReferrerReceiver.java" target-dir="src/ly/count/android/sdk"/>
     <source-file src="src/android/UserData.java" target-dir="src/ly/count/android/sdk"/>
 
+    <source-file src="src/android/messaging/CountlyMessaging.java" target-dir="src/ly/count/android/sdk/messaging"/>
+    <source-file src="src/android/messaging/CountlyMessagingService.java" target-dir="src/ly/count/android/sdk/messaging"/>
+    <source-file src="src/android/messaging/Message.java" target-dir="src/ly/count/android/sdk/messaging"/>
+    <source-file src="src/android/messaging/ProxyActivity.java" target-dir="src/ly/count/android/sdk/messaging"/>
 
     <source-file src="src/android/OpenUDID_manager.java" target-dir="src/org/openudid/"/>
     <source-file src="src/android/OpenUDID_service.java" target-dir="src/org/openudid/"/>
 
+    <source-file src="src/android/libs/gcm.jar" target-dir="libs/" />
+    <source-file src="src/android/libs/android-support-v13.jar" target-dir="libs/" />
+    <source-file src="src/android/libs/google-play-services.jar" target-dir="libs/" />
+    <source-file src="src/android/libs/play-services-gcm.jar" target-dir="libs/" />
 
   </platform>
 
