does work on android studio but not with cordova build, error removed on cordova build

--- a/plugin.xml
+++ b/plugin.xml
@@ -125,6 +125,7 @@
     <source-file src="src/android/libs/google-play-services.jar" target-dir="libs/" />
     <source-file src="src/android/libs/play-services-gcm.jar" target-dir="libs/" />
 
+    <source-file src="src/android/gradle/build-extras.gradle" target-dir="src/.." />
   </platform>
 
   <!-- wp8 -->
