changes made whilte testing

--- a/plugin.xml
+++ b/plugin.xml
@@ -72,6 +72,8 @@
     <source-file src="src/ios/sdk/CountlyViewTracking.m" />
     <source-file src="src/ios/sdk/CountlyPushNotifications.h" />
     <source-file src="src/ios/sdk/CountlyPushNotifications.m" />
+    <source-file src="src/ios/sdk/CountlyNotificationService.h" />
+    <source-file src="src/ios/sdk/CountlyNotificationService.m" />
     <!-- <source-file src="src/ios/sdk/Countly.xcdatamodeld" custom="true"/> -->
 
     <header-file src="src/ios/CountlyCordova.h"/>
@@ -141,7 +143,7 @@
     <source-file src="src/android/ReferrerReceiver.java" target-dir="src/ly/count/android/sdk"/>
     <source-file src="src/android/UserData.java" target-dir="src/ly/count/android/sdk"/>
     <source-file src="src/android/CountlyStarRating.java" target-dir="src/ly/count/android/sdk"/>
-    
+
     <!-- push notification config -->
     <!-- <source-file src="src/android/messaging/CountlyMessaging.java" target-dir="src/ly/count/android/sdk/messaging"/>
     <source-file src="src/android/messaging/CountlyMessagingService.java" target-dir="src/ly/count/android/sdk/messaging"/>
