--- a/plugin.xml
+++ b/plugin.xml
@@ -91,21 +91,19 @@
 
     <config-file target="AndroidManifest.xml" parent="/manifest">
         <uses-permission android:name="android.permission.INTERNET"/>
-        <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE"/>
+        <!-- These permissions might be for push plugin. -->
+        <!-- <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE"/>
         <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
-        <uses-permission android:name="android.permission.WAKE_LOCK"/>
+        <uses-permission android:name="android.permission.WAKE_LOCK"/> -->
     </config-file>
 
 
     <config-file target="AndroidManifest.xml" parent="/manifest/application">
-
         <service android:name="org.openudid.OpenUDID_service">
             <intent-filter>
                 <action android:name="org.openudid.GETUDID" />
             </intent-filter>
         </service>
-
-  <activity android:label="@string/app_name" android:name="ly.count.android.sdk.messaging.ProxyActivity" android:noHistory="true" android:theme="@android:style/Theme.Translucent" />
     </config-file>
 
     <source-file src="src/android/CountlyCordova.java" target-dir="src/ly/count/android/sdk"/>
@@ -133,16 +131,5 @@
 
     <source-file src="src/android/gradle/build-extras.gradle" target-dir="src/.." />
   </platform>
-
-  <!-- wp8 -->
-  <platform name="wp8">
-    <config-file target="config.xml" parent="/*">
-      <feature name="CountlyCordova">
-        <param name="wp-package" value="CountlyCordova"/>
-      </feature>
-    </config-file>
-
-    <source-file src="src/wp8/CountlyCordova.cs" />
-  </platform>
-
+  
 </plugin>
