--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "https://github.com/Countly/countly-sdk-js/issues"
   },
   "cordova": {
-    "id": "ly.count.cordova",
+    "id": "countly-sdk-js",
     "platforms": [
       "ios",
       "android"
