--- a/plugin.xml
+++ b/plugin.xml
@@ -73,7 +73,19 @@
     <source-file src="src/android/CountlyCordova.java" target-dir="src/ly/count/android/sdk"/>
     <source-file src="src/android/CountlyNative.java" target-dir="src/ly/count/android/sdk"/>
     <framework src="ly.count.android:sdk:19.02.3" />
+
+    <!-- Push notification -->
+    <config-file target="AndroidManifest.xml" parent="/manifest/application">
+        <service android:name="ly.count.android.sdk.CountlyMessagingService">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+    </config-file>
+    <dependency id="cordova-support-google-services" version="~1.3.1"/>
     <framework src="ly.count.android:sdk-messaging-fcm:19.02.3" />
+    <framework src="com.google.firebase:firebase-messaging:20.0.0" />
+    <source-file src="src/android/CountlyMessagingService.java" target-dir="src/ly/count/android/sdk"/>
   </platform>
 
 </plugin>
