--- a/plugin.xml
+++ b/plugin.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android" id="countly-sdk-js" version="19.8.2">
+<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android" id="countly-sdk-js" version="19.9.2">
 
   <name>Countly</name>
 
@@ -72,7 +72,7 @@
 
     <source-file src="src/android/CountlyCordova.java" target-dir="src/ly/count/android/sdk"/>
     <source-file src="src/android/CountlyNative.java" target-dir="src/ly/count/android/sdk"/>
-    <framework src="ly.count.android:sdk:19.02.3" />
+    <framework src="ly.count.android:sdk:19.09.2" />
 
     <!-- Push notification -->
     <config-file target="AndroidManifest.xml" parent="/manifest/application">
@@ -83,7 +83,7 @@
         </service>
     </config-file>
     <dependency id="cordova-support-google-services" version="~1.3.1"/>
-    <framework src="ly.count.android:sdk-messaging-fcm:19.02.3" />
+    <!-- <framework src="ly.count.android:sdk-messaging-fcm:19.02.3" /> -->
     <framework src="com.google.firebase:firebase-messaging:20.0.0" />
     <source-file src="src/android/CountlyMessagingService.java" target-dir="src/ly/count/android/sdk"/>
   </platform>
