Synchronising android sample app

--- a/example/cordova/countly-demo-js/package.json
+++ b/example/cordova/countly-demo-js/package.json
@@ -24,8 +24,8 @@
       "countly-sdk-js": {}
     },
     "platforms": [
-      "android",
-      "ios"
+      "ios",
+      "android"
     ]
   },
   "devDependencies": {
