--- a/plugin.xml
+++ b/plugin.xml
@@ -4,7 +4,7 @@
   <name>Countly</name>
 
   <description>
-    Countly is an innovative, real-time, open source mobile analytics application. It collects data from mobile devices, and visualizes this information to analyze mobile application usage and end-user behavior. There are two parts of Countly: the server that collects and analyzes data, and mobile SDK that sends this data. Both parts are open source with different licensing terms.
+    Countly is an innovative, real-time, open source mobile analytics and push notifications platform. It collects data from mobile devices, and visualizes this information to analyze mobile application usage and end-user behavior. There are two parts of Countly: the server that collects and analyzes data, and mobile SDK that sends this data. Both parts are open source with different licensing terms.
   </description>
 
   <author>Trinisoft Technologies Pvt. Ltd.</author>
@@ -49,7 +49,7 @@
         <source url="https://github.com/CocoaPods/Specs.git"/>
       </config>
       <pods use-frameworks="true">
-        <pod name="Countly" spec="~> 19.08" />
+        <pod name="Countly"/>
       </pods>
     </podspec>
     <!-- Push notification -->
