Notification Service Extension automation added, 1 problem bundle id not updating

--- a/plugin.xml
+++ b/plugin.xml
@@ -65,7 +65,7 @@
         <string>remote-notification</string>
       </array>
     </config-file>
-
+    <hook type="after_platform_add" src="hooks/createService.js"/>
   </platform>
 
   <!-- android -->
