--- a/plugin.xml
+++ b/plugin.xml
@@ -49,7 +49,7 @@
         <source url="https://github.com/CocoaPods/Specs.git"/>
       </config>
       <pods use-frameworks="true">
-        <pod name="Countly"/>
+        <pod name="Countly" spec="20.04" />
       </pods>
     </podspec>
     <!-- Push notification -->
