--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "countly-sdk-js",
+  "name": "countly-sdk-cordova",
   "description": "Countly is an innovative, real-time, open source mobile analytics and push notifications platform. It collects data from mobile devices, and visualizes this information to analyze mobile application usage and end-user behavior. There are two parts of Countly: the server that collects and analyzes data, and mobile SDK that sends this data. Both parts are open source with different licensing terms.",
   "version": "20.4.0",
-  "homepage": "https://github.com/Countly/countly-sdk-js#readme",
+  "homepage": "https://github.com/Countly/countly-sdk-cordova#readme",
   "repository": {
     "type": "git",
-    "url": "git://github.com/Countly/countly-sdk-js.git"
+    "url": "git://github.com/Countly/countly-sdk-cordova.git"
   },
   "bugs": {
-    "url": "https://github.com/Countly/countly-sdk-js/issues"
+    "url": "https://github.com/Countly/countly-sdk-cordova/issues"
   },
   "cordova": {
-    "id": "countly-sdk-js",
+    "id": "countly-sdk-cordova",
     "platforms": [
       "ios",
       "android"
