--- a/plugin.xml
+++ b/plugin.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android" id="countly-sdk-js" version="20.4.0">
+<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android" id="countly-sdk-cordova" version="20.4.0">
 
   <name>Countly</name>
 
@@ -13,9 +13,9 @@
 
   <keywords>Event, Mobile analytical</keywords>
 
-  <repo>https://github.com/Countly/countly-sdk-js.git</repo>
+  <repo>https://github.com/Countly/countly-sdk-cordova.git</repo>
 
-  <issue>https://github.com/Countly/countly-sdk-js/issues</issue>
+  <issue>https://github.com/Countly/countly-sdk-cordova/issues</issue>
 
   <engines>
     <engine name="cordova" version=">=3.0.0"/>
