--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "cordova-android"
   ],
   "engines": {},
-  "author": "Trinisoft Technologies Pvt. Ltd.",
+  "author": "Countly. Ltd.",
   "license": "MIT",
   "scripts": {},
   "devDependencies": {},
